
      \item \code{gl()} runs faster by avoiding calling \code{factor()}.
      
      \item The \code{print()} method for \code{object.size()} accepts
      \samp{B} as well as \samp{b} as an abbreviation for \sQuote{bytes}.
      
      \item \code{unlink()} gains a \code{force} argument to work like
      \code{rm -f} and if possible override restrictive permissions.
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Option \code{keep.source = TRUE} is now the default.

      \item The way the type of user-defined options is determined has
      changed.  Previously they were all regarded as logical: now the
      type is determined by the value given at first use.

      \item The allowed values of logical options are now precisely
      those allowed for character inputs to \code{as.logical()}: this
      means that \samp{t} and \samp{f} are no longer allowed (although
      \code{T} and \code{F} still are).

      \item \code{Sweave()} and \code{Stangle()} gain an \code{encoding}
      argument to specify the encoding of the vignette sources if the
      latter do not contain a \samp{\\usepackage[]{inputenc}} statement
      specifying a single input encoding.

      \item Package installation tangles the vignette sources: this step
      now converts the vignette sources from the vignette/package
      encoding to the current encoding, and records the encoding (if not
      ASCII) in a comment line at the top of the installed \file{.R}
      file.

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
	build} will now re-build vignettes in \file{vignettes} and copy
      the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.
