@@ -1,8 +1,8 @@
 
-R version 2.14.0 Under development (unstable) (2011-04-16 r55479)
+R version 2.14.0 Under development (unstable) (2011-04-17 r55484)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin9.8.0/x86_64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -3888,41 +3888,39 @@ probability of success
 > require(graphics)
 > 
 > ## the standard version
-> qbirthday()
-[1] 22
+> qbirthday() # 23
+[1] 23
+> ## probability of > 2 people with the same birthday
+> pbirthday(23, coincident = 3)
+[1] 0.01441541
+> 
+> ## examples from Diaconis & Mosteller p. 858.
+> ## 'coincidence' is that husband, wife, daughter all born on the 16th
+> qbirthday(classes = 30, coincident = 3) # approximately 18
+[1] 18
+> qbirthday(coincident = 4)  # exact value 187
+[1] 187
+> qbirthday(coincident = 10) # exact value 1181
+[1] 1179
 > 
 > ## same 4-digit PIN number
 > qbirthday(classes = 10^4)
-[1] 118
+[1] 119
 > 
-> ## 0.9 probability of three coincident birthdays
+> ## 0.9 probability of three or more coincident birthdays
 > qbirthday(coincident = 3, prob = 0.9)
-[1] 123
+[1] 135
 > 
-> ## Chance of 4 coincident birthdays in 150 people
+> ## Chance of 4 or more coincident birthdays in 150 people
 > pbirthday(150, coincident = 4)
-[1] 0.351437
+[1] 0.2690146
 > 
-> ## 100 coincident birthdays in 1000 people: *very* rare:
+> ## 100 or more coincident birthdays in 1000 people: very rare
 > pbirthday(1000, coincident = 100)
-[1] 2.395639e-112
-> 
-> ## Accuracy compared to exact calculation
-> x1 <-  sapply(10:100, pbirthday)
-> x2 <- 1-sapply(10:100, function(n) prod((365:(365-n+1))/rep(365,n)))
-> par(mfrow = c(2,2))
-> plot(x1, x2, xlab = "approximate", ylab = "exact")
-> abline(0, 1)
-> plot(x1, x1-x2, xlab = "approximate", ylab = "error")
-> abline(h = 0)
-> plot(x1, x2, log = "xy", xlab = "approximate", ylab = "exact")
-> abline(0, 1)
-> plot(1-x1, 1-x2, log = "xy", xlab = "approximate", ylab = "exact")
-> abline(0, 1)
+[1] 1.531434e-113
 > 
 > 
 > 
-> graphics::par(get("par.postscript", pos = 'CheckExEnv'))
 > cleanEx()
 > nameEx("box.test")
 > ### * box.test
